tests/samples/negative/pattern_matching/enum_pattern_unknown_case.ax
module enum_pattern_unknown_case;

enum Choice {
    first,
    second,
}

fn main() -> i32 {
    let choice = Choice.first;
    return match choice {
        .missing => 0,
        _ => 1,
    };
}
